@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libmp4v2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmp4v2/ChangeLog,v 1.49 2009/07/14 18:34:16 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmp4v2/ChangeLog,v 1.50 2009/07/15 09:48:12 ssuominen Exp $
+
+  15 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> libmp4v2-1.9.0.ebuild,
+  libmp4v2-1.9.1.ebuild:
+  Restore elibtoolize for ~x86-fbsd.
 
 *libmp4v2-1.9.1 (14 Jul 2009)
 
